--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+textarea { 
+  padding-right: 0.75ch; /* TODO: Future task: Override this in MuiTheme */
+}
+
 @font-face {
   font-family: 'Assistant';
   font-style: normal;
